# Demotool-Qodia

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-nginx  README.md  app.py  app.yaml  compose.yaml  deploy.sh  generate_exe.py  pyproject.toml  requirements.txt  utils.py
data/: GOA_Ziffern.csv  rechnung_generiert.html  template_rechnung.html
schemas/padnext_v2_py/: __init__.py  padx_adl_v2_12.py  padx_auf_v2_12.py  padx_basis_v2_12.py  padx_qadl_v2_12.py
scripts/: download_and_install.ps1  download_and_install.sh  generate_self_signed_cert.sh  push_to_public_repo.sh  setup.ps1  setup.sh  setup_python.ps1  start_qodia_python.bat
ssl/: certificate.pem  private_key.pem  public_key.pem
temp/: 00666666_20170824_ADL_100004_auf.xml  00666666_20170824_ADL_100004_dat_padx.zip.p7m  00666666_20170824_ADL_100004_padx.xml
tests/padnext/: decrpyt.py  encrpyt.py
tests/padnext/decrypted_output/: 00666666_20170824_ADL_100004_auf.xml
tests/padnext/test - own/: 00666666_20170824_ADL_100004_auf.xml
utils/: anonymization.py  session.py  utils.py
utils/helpers/: anonymization.py  api.py  background.py  canvas.py  db.py  distribution_store.py  document_store.py  encrpyter.py  feedback.py  files.py  logger.py  ocr.py  padnext.py  pdf_generator.py  settings.py  telemetry.py  transform.py
utils/stages/: analyze.py  anonymize.py  edit_anonymized.py  export_modal.py  feedback_modal.py  generate_result_modal.py  modal.py  rechnung_anonymize.py  result.py  select_bill.py  select_distribution_pages.py  select_documents.py
(+14 files in other folders)
