[tool.poetry]
name = "demotool"
version = "0.1.0"
description = ""
authors = ["StephanPythonGod <bozztryh@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
streamlit-cookies-controller = "^0.0.4"
fuzzywuzzy = "^0.18.0"
st-annotated-text = "^4.0.1"
streamlit-drawable-canvas = "^0.9.3"
pdf2image = "^1.17.0"
transformers = "^4.44.2"
sentencepiece = "^0.2.0"
spacy = "^3.8.0"
presidio-anonymizer = "^2.2.355"
presidio-analyzer = "^2.2.355"
torch = "^2.4.1"
pytesseract = "^0.3.13"
flair = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"